[package]
name = "dioon"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-013: The Timing/Organic Layer. Organic patience, niche-window decision making, and 128-bit metabolic rhythm for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://dioon.com"
repository = "http://github.com/Aicent-Stack/dioon"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Organic wisdom requires the DNA of the Soul (RFC-000).
# Anchoring 300 million years of cycad-logic to 128-bit sovereign identity.
epoekie = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit niche windows, patience indices, and decisions.
serde = { version = "1.0", features = ["derive"] }

# Required for async metabolism alignment and the 10ms Patience Friction tax enforcement.
# Supports the rhythmic synchronization with the planetary Hive.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Timing logic WILL 
# be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables niche-window optimization and propagates features down.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Window Timestamps, Decision Hashes, Rhythm).
# Chronos: 2026 Imperial Calendar Aligned.
